# fallout1-ce

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci-build.yml  release.yml
cmake/: FalloutTestHelpers.cmake
cmake/platform/: Emscripten.cmake
src/: CMakeLists.txt  audio_engine.cc  fps_limiter.cc  movie_lib.cc  movie_lib.h  platform_compat.cc  platform_compat.h  shell.html
src/game/: CMakeLists.txt  actions.cc  amutex.cc  combat.cc  editor.cc  game.cc  loadsave.cc  main.cc  main.h  mainmenu.cc  object.cc  sfxlist.cc  worldmap.cc
src/int/: CMakeLists.txt  intrpret.cc  mousemgr.cc  movie.cc  sound.cc  widget.cc  window.cc  window.h
src/plib/: CMakeLists.txt
src/plib/color/: color.cc
src/plib/db/: db.cc
src/plib/gnw/: dxinput.cc  dxinput.h  gnw.cc  grbuf.cc  input.cc  input.h  input_runtime.cc  input_runtime.h  intrface.cc  kb.cc  lifecycle.cc  lifecycle.h  mouse.cc  svga.cc  svga_types.h  touch.cc  touch.h  winmain.cc
tests/: CMakeLists.txt  db_warning_regression_test.cc  input_runtime_test.cc  lifecycle_test.cc  loader_contract_test.cc  pointer_registry_test.cc
web/: README.md
